--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
     "solid-js": "^1.9.5",
+    "sweetalert2": "^11.21.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
