--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "solid-js": "^1.9.5",
     "sweetalert2": "^11.21.0",
     "tailwindcss": "^4.1.4"
